[package]
name = "tl"
version = "0.4.3"
authors = ["y21"]
edition = "2021"
license = "MIT"
description = "html parser written in rust"
repository = "https://github.com/y21/tl"
homepage = "https://github.com/y21/tl"
readme = "README.md"
documentation = "https://docs.rs/tl"
keywords = ["html", "parser"]
categories = ["parser-implementations", "parsing"]
exclude = [".github/*"]

[features]
simd = []

[dependencies]
