[package]
name = "tl"
version = "0.7.1"
authors = ["y21"]
edition = "2021"
license = "MIT"
description = "Fast HTML parser written in pure Rust"
repository = "https://github.com/y21/tl"
homepage = "https://github.com/y21/tl"
readme = "README.md"
documentation = "https://docs.rs/tl"
keywords = ["html", "parser"]
categories = ["parser-implementations", "parsing"]
exclude = [".github/*"]

[features]
simd = []

[dependencies]
