[package]
name = "tl"
version = "0.7.6"
authors = ["y21"]
edition = "2021"
license = "MIT"
description = "Fast HTML parser written in pure Rust"
repository = "https://github.com/y21/tl"
homepage = "https://github.com/y21/tl"
readme = "README.md"
documentation = "https://docs.rs/tl"
keywords = ["html", "parser"]
categories = ["parser-implementations", "parsing"]
exclude = [".github/*"]

[features]
simd = []

# for fuzzing and benchmarking internals, we need to make them public so that they can be accessed from outside testing crates
# users of the library should never use these directly
__INTERNALS_DO_NOT_USE = []

[dependencies]
smallvec = { version = "1.9.0", features = ["const_generics"] }


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "tl"
harness = false
